<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tinted Translucent Statusbar</string>
    <string name="str_waiting_apps">Loading&#8230;</string>
    <string name="title_activity_settings">TTSB General Settings</string>
    <string name="str_action_settings">General Settings</string>
    <string name="str_action_update">Refresh list</string>
    <string name="showActivityToasts">Show the Activity name on entering an activity to determine their names</string>
    <string name="version_prefix">TTSB version</string>
    <string name="tintengine_ver_prefix">Tinting engine version</string>
    <string name="ui_ver_prefix">UI version</string>
    <string name="database_prefix">App database last update</string>
    <string name="never">-never-</string>
    <string name="copyright_info">Developed by Woalk Software\nxda-developers user woalk</string>
    <string name="thanks_to_info">Using code from SystemBarTint by Jeff Gilfelt\n(readyState Software Ltd) / Github user jgilfelt</string>
    <string name="title_activity_activities">Activities from</string>
    <string name="title_activity_easy_settings">Settings for</string>
    <string name="all_activities">All Activities</string>
    <string name="str_action_use_settingscode">Enter code directly</string>
    <string name="str_action_copy_easy_settings">Copy settings</string>
    <string name="str_action_paste_easy_settings">Paste settings</string>
    <string name="str_action_delete">Delete this setting</string>
    <string name="str_action_copy_rules">Copy rules</string>
    <string name="str_action_paste_rules">Paste rules</string>
    <string name="settingscode_title">Settings code</string>
    <string name="settingscode_msg">Please enter, copy or paste TTSB settings code:</string>
    <string name="delete_title">Delete setting</string>
    <string name="delete_msg">Do you want to delete this setting permanently?</string>
    <string name="cview_edit_title">Settings for cview</string>
    <string name="content_edit_title">Settings for content View</string>
    <string name="decview_edit_title">Settings for DecorView</string>
    <string name="check_status">Enable TTSB for status bar</string>
    <string name="descr_color">Color (#aarrggbb)</string>
    <string name="check_nav">Enable TTSB for navigation bar</string>
    <string name="descr_layoutopt">Default layout options:</string>
    <string name="check_s_plus">Remove the annoying one pixel line on top of ActionBars</string>
    <string name="btn_advanced">Configure custom rules (advanced)</string>
    <string name="title_activity_rules">Advanced rules</string>
    <string name="descr_s_plus">Increase status bar height (dp):</string>
    <string name="descr_n_plus">Increase navigation bar height (dp):</string>
    <string name="descr_check_cview">View 1 past the Content View (“cview”)</string>
    <string name="str_btn_edit">Edit&#8230;</string>
    <string name="descr_check_content">Content View</string>
    <string name="descr_check_decview">Decor View (outest View)</string>
    <string name="str_btn_add_rule">Add View rule&#8230;</string>
    <string name="str_check_setFSW">Set FitsSystemWindows attribute</string>
    <string name="v_true" translatable="false">true</string>
    <string name="v_false" translatable="false">false</string>
    <string name="str_check_setCTP">Set clipToPadding attribute</string>
    <string name="str_check_padding">Set additional padding</string>
    <string name="p_left">Left:</string>
    <string name="p_top">Top:</string>
    <string name="p_right">Right:</string>
    <string name="p_bottom">Bottom:</string>
    <string name="str_check_plus_status_h">+ status ht.</string>
    <string name="str_check_plus_actionbar_h">+ action ht.</string>
    <string name="str_check_plus_nav_h">+ navigation ht.</string>
    <string name="str_check_plus_nav_w">+ navigation width</string>
    <string name="v_delete">Delete</string>
    <string name="descr_from">From:</string>
    <string name="descr_levels">Levels:</string>
    <string name="descr_childindexes">Child indexes (separate by comma):</string>
    <string name="str_action_save">Save</string>
    <string name="str_saved">Settings saved.</string>
    <string name="str_action_sync_with_database">Open TTSB Community</string>
    <string name="str_action_send_to_database">Submit this to TTSB Community</string>
    <string name="title_activity_sync">Sync settings</string>
    <string name="str_select_sync_apps">Select the apps for which you want to load the database-provided settings:</string>
    <string name="str_addsync">Sync</string>
    <string name="loadingsync_msg">Loading, please wait&#8230;</string>
    <string name="settings_synced_success">The selected settings have been imported from database successfully.</string>
    <string name="str_action_delete_package_settings">Delete all settings for this app</string>
    <string name="delete_pkg_title">Delete app settings</string>
    <string name="delete_pkg_msg">Do you want to delete all the settings for this app permanently?</string>
    <string name="settings_suggest_success">The selected settings have been published successfully in the Community.</string>
    <string name="suggestsync_msg">Please wait while TTSB sends your submit to the TTSB Community&#8230;</string>
    <string name="suggest_qu_title">Submit this app settings</string>
    <string name="suggest_qu_msg">Do you want to send your settings for this app to TTSB\'s suggestions, so Woalk can check and include them in the database?\n\n<i>No other data will be submitted or saved.</i></string>
    <string name="no_connection_e">Seems like you don\'t have an internet connection.\nCheck your Wifi or mobile data settings.</string>
    <string name="str_check_log">Enable debug logging</string>
    <string name="no_settings_e">You must have settings set before you can edit advanced rules.</string>
    <string name="prefix_timestamp">Entry timestamp:</string>
    <string name="advertise_translucentstyle_text">Do you want some more uniqueness in look of TTSB?\nTry “Translucent Style” Xposed module to make your translucent modes appear way different than usually!</string>
    <string name="advertise_translucentstyle_btn">Get it from Xposed Repository!</string>
    <string name="title_activity_my_apps">Community: My apps</string>
    <string name="str_action_goto_user">Find user by name&#8230;</string>
    <string name="msg_action_goto_user">Please enter the user name you\'re looking for:</string>
    <string name="str_action_goto_my">My profile</string>
    <string name="title_versionselect">Select version</string>
    <string name="msg_versionselect">There are multiple versions of this app in the TTSB Community. Please select the version you\'re looking for:</string>
    <string name="suffix_installedversion">(Currently installed)</string>
    <string name="prefix_community_appversion">Version </string>
    <string name="title_activity_app_details">Community: Submits for this app</string>
    <string name="community_prefix_by">By</string>
    <string name="community_prefix_at">at</string>
    <string name="community_prefix_for_ver">for version</string>
    <string name="community_chosen">Chosen</string>
    <string name="title_activity_one_submit">Submit details</string>
    <string name="str_action_show_only_current_ver">Show current version only</string>
    <string name="str_action_show_all">Show all</string>
    <string name="button_choose">Choose</string>
    <string name="button_choose_layout">Choose layout only</string>
    <string name="button_view_settings">View settings</string>
    <string name="str_comments">Comments</string>
    <string name="title_view_settings">Settings of this submit</string>
    <string name="title_already_set">Wait a sec!</string>
    <string name="msg_already_set">Do you want to overwrite existing settings of this app?\n\nNote: Merging the settings just keeps the Activities from your local settings that are not included in this submit.</string>
    <string name="merge_already_set">Merge</string>
    <string name="overwrite_already_set">Overwrite</string>
    <string name="title_already_set_layout">Layout overwriting</string>
    <string name="msg_already_set_layout">Do you want to overwrite existing layout settings of this app?\nColor settings will remain unchanged.</string>
    <string name="title_comment_options">Comment</string>
    <string name="no_comments">No comments yet.</string>
    <string name="title_activity_one_user">User info</string>
    <string name="action_settings">Settings</string>
    <string name="user_vote_sum">Total vote sum:</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_repeat">Confirm Password</string>
    <string name="signin_fail">Username or password is wrong.</string>
    <string name="signup_fail_already_given">Username is already in use.</string>
    <string name="signup_fail_not_confirmed">Your passwords do not match.</string>
    <string name="submit_descr_title">Submit</string>
    <string name="submit_descr_msg">Please enter a description.\nAn empty description is not allowed.</string>
    <string name="submit_descr_info"><i>You can use HTML tags such as <b>&lt;b&gt;</b>, <b>&lt;i&gt;</b>, <b>&lt;br /&gt;</b>, &#8230;</i></string>
    <string name="action_delete_submit">Delete submit</string>
    <string name="q_delete_submit">Do you really want to permanently delete this submit?</string>
    <string name="error_try_again">An error occurred, please try again later.</string>
    <string name="user_not_found">This user does not exist.</string>
    <string name="str_action_edit_name">Change username</string>
    <string name="str_action_logout">Logout</string>
    <string name="str_action_delete_profile">Delete my profile</string>
    <string name="str_q_delete_profile"><b>Warning.</b> You selected to delete your profile.\n<i>Maybe you meant logout, one option above it?</i>\n\nIf you delete your profile, you <b>won\'t</b> be able to login again after that, and your username becomes free again.\n<b>All</b> of your submits, comments, and votes would be deleted.<br />\nDo you want to continue and delete your profile?</string>
    <string name="dlyos">Don\'t like your own submit!</string>
    <string name="str_action_notifications">My notifications</string>
    <string name="title_activity_notifications">Community: My notifications</string>
    <string name="str_notif_vote">New vote</string>
    <string name="str_notif_comment">New comment</string>
    <string name="str_notif_mention">New mention</string>
    <string name="strf_notif_vote_plus">Your submit has been liked by %1$s.</string>
    <string name="strf_notif_vote_minus">Your submit has been disliked by %1$s.</string>
    <string name="strf_notif_comment">%1$s left a comment on your submit.</string>
    <string name="strf_notif_mention">%1$s mentioned you by "@(user)".</string>
    <string name="app_not_installed">App not installed.</string>
    <string name="signuo_your_pw">Your password has been autogenerated.\n<b>Please save it somewhere safe!</b>\n\nYour password is:</string>
    <string name="str_action_new_pw">Generate new password</string>
    <string name="msg_generate_pw">Do you really want to generate a new autogenerated password?</string>
    <string name="str_check_immersive">Check for hiding status bar
        <i>(Changing this needs a soft reboot to apply.)</i></string>

</resources>
