<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/descr_from" />

        <Spinner
            android:id="@+id/spinner_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textView_from"
            android:entries="@array/vsetpk_from" />

        <TextView
            android:id="@+id/textView_levels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/spinner_from"
            android:text="@string/descr_levels" />

        <EditText
            android:id="@+id/editText_levels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/textView_levels"
            android:layout_below="@id/spinner_from"
            android:layout_toRightOf="@id/textView_levels"
            android:ems="10"
            android:inputType="numberSigned"
            android:minWidth="48dp"
            android:text="1" />

        <TextView
            android:id="@+id/textView_childindexes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/editText_levels"
            android:text="@string/descr_childindexes" />

        <EditText
            android:id="@+id/editText_childindexes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/textView_childindexes"
            android:ems="10"
            android:inputType="number"
            android:text="0"
            android:digits="0123456789,+-" />

        <CheckBox
            android:id="@+id/checkBox_setFSW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_childindexes"
            android:layout_marginTop="8dp"
            android:text="@string/str_check_setFSW" />

        <RadioGroup
            android:id="@+id/radioGroup_FSW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/checkBox_setFSW"
            android:layout_marginLeft="24dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_FSW1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:checked="true"
                android:enabled="false"
                android:text="@string/v_true" />

            <RadioButton
                android:id="@+id/radio_FSW0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:enabled="false"
                android:text="@string/v_false" />

        </RadioGroup>

        <CheckBox
            android:id="@+id/checkBox_setCTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/radioGroup_FSW"
            android:layout_marginTop="6dp"
            android:text="@string/str_check_setCTP" />

        <RadioGroup
            android:id="@+id/radioGroup_CTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/checkBox_setCTP"
            android:layout_marginLeft="24dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_CTP1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:enabled="false"
                android:text="@string/v_true" />

            <RadioButton
                android:id="@+id/radio_CTP0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:checked="true"
                android:enabled="false"
                android:text="@string/v_false" />

        </RadioGroup>

        <CheckBox
            android:id="@+id/checkBox_setPadding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/radioGroup_CTP"
            android:layout_marginTop="6dp"
            android:text="@string/str_check_padding" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/checkBox_setPadding"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="12dp"
            android:stretchColumns="1" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView_pleft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/p_left" />

                <EditText
                    android:id="@+id/editText_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="number" >

                    <requestFocus />
                </EditText>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow1_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2" >

                    <CheckBox
                        android:id="@+id/checkBox_status_h"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:text="@string/str_check_plus_status_h" />

                    <CheckBox
                        android:id="@+id/checkBox_actionbar_h"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:text="@string/str_check_plus_actionbar_h" />

                </LinearLayout>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView_ptop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/p_top" />

                <EditText
                    android:id="@+id/editText_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView_pright"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/p_right" />

                <EditText
                    android:id="@+id/editText_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow3_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/checkBox_nav_w"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:text="@string/str_check_plus_nav_w" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView_pbottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/p_bottom" />

                <EditText
                    android:id="@+id/editText_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow4_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/checkBox_nav_h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:text="@string/str_check_plus_nav_h" />

            </TableRow>

        </TableLayout>

    </RelativeLayout>

</ScrollView>