<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/hint_username"
        android:digits="abcdefghijklmnopqrstuvwxyz0123456789_" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_password_repeat"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tV_err_already_given"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/signup_fail_already_given"
        android:textColor="@android:color/holo_red_light"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tV_err_not_confirmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/signup_fail_not_confirmed"
        android:textColor="@android:color/holo_red_light"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tV_terms"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="6dp"
        android:minHeight="10dp"
        android:minWidth="10dp"
        android:text="@string/link_terms_of_use"
        android:textColor="@android:color/holo_blue_light"
        android:visibility="gone" />

</LinearLayout>
